@@ -7174,3 +7174,6 @@
 	* arch/arm/src/sama5/sam_adc.c, sam_can.c, sam_emac.c, sam_gmac.c, 
 	  sam_ssc.c, and sam_twi.c:  If running from SDRAM, then BOARD_MCK_FREQUENCY
 	  is not a constant and cannot be used in conditional compilation (2014-4-16).
+	* drivers/lcd/mio283qt9a.c and include/nuttx/lcd/mio283qt9a.h:  Update the
+	  MIO183QT-9A LCD driver to support reading from the LCD.  From Toby
+	  Duckworth (2014-4-16).
